--- a/static_frontpage/sthlmflow.css
+++ b/static_frontpage/sthlmflow.css
@@ -2,7 +2,6 @@ body {
 	background-color: black;
     overflow-y:scroll;
 	overflow-x:hidden;
-
 }
 .container {
 	/*width:100%;*/
@@ -23,9 +22,16 @@ body {
 	margin-right: auto;
 	display:block; 
 }
-.centered-content {
-    display:flex;
-    justify-content:flex-end;
+
+.copyright {
+	float:left;
+	margin-left:15px;
+}
+@media screen and (min-width: 768px){
+	.copyright {
+		float:right;
+		margin:0;
+	}
 }
 
 .main-content {
@@ -35,21 +41,37 @@ body {
 	background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 	padding-top:9px;
 }
-nav {
-	display:flex;
-	justify-content: center;
-}
 
+
+nav {
+	display:block;
+	
+}
+@media screen and (min-width: 768px){
+	nav {
+		display:flex;
+		justify-content: center;
+	}
+	
+}
 .navbar-inverse {
 	background-color: rgb(127, 0, 0);
 	background-color: rgba(120, 120, 120, .2);
 }
+
+@media screen and (min-width: 768px){
+	.footer{
+		margin-top:0;
+		position:relative;
+		bottom: 15px;
+		width: 100%;
+		/* Set the fixed height of the footer here */
+		height: 15px;
+	}
+}
 .footer {
-  position:relative;
-  bottom: 15px;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 15px;
+  margin-top:30px;
+
 }
 .nodisplay {
     display:none;
@@ -66,6 +88,14 @@ nav {
     max-width: 450px;
     float:left;
 }
+
+
 article > p {
     color:#FFF;
+}
+
+.btn-more{
+	margin: 0 15px 0 15px;
+	
+	width:90%
 }
