border on copyright

--- a/static_frontpage/sthlmflow.css
+++ b/static_frontpage/sthlmflow.css
@@ -26,11 +26,14 @@ body {
 .copyright {
 	float:left;
 	margin-left:15px;
+    border-bottom: 1px dotted white;
+    padding-bottom: 5px;
 }
 @media screen and (min-width: 768px){
 	.copyright {
 		float:right;
 		margin:0;
+		
 	}
 }
 
