--- a/static_frontpage/sthlmflow.css
+++ b/static_frontpage/sthlmflow.css
@@ -65,10 +65,12 @@ nav {
 
 .navbar-title{
 	color: #FFF;
-    font-weight: bold;
+    font-size: 25px;
     margin-top: 15px;
     margin-left: 15px;
 	display:block;
+	font-family: "Gabriola";
+	line-height:25px;
 }
 
 @media screen and (min-width: 768px){
