--- a/static_frontpage/sthlmflow.css
+++ b/static_frontpage/sthlmflow.css
@@ -4,36 +4,41 @@ body {
 	overflow-x:hidden;
 }
 .container {
-	/*width:100%;*/
 	height:auto;
-
 }
 
 #main-header {
 	margin-top:10px;
 	margin-bottom:10px;
 }
+
 .header-image {
 	max-width:768px;
 	height:412px;
-	/* position:relative; */
-	/* left:50%; */
-	margin-left: auto;
-	margin-right: auto;
-	display:block; 
+	position:relative; 
+	left:-20%;
 }
-
+@media screen and (min-width: 768px){
+	.header-image {
+		max-width:768px;
+		height:412px;
+		margin-left: auto;
+		margin-right: auto;
+		display:block; 
+		left:0;
+	}
+}
 .copyright {
 	float:left;
 	margin-left:15px;
     border-bottom: 1px dotted white;
-    padding-bottom: 5px;
+    
 }
 @media screen and (min-width: 768px){
 	.copyright {
 		float:right;
 		margin:0;
-		
+		padding-bottom: 5px;
 	}
 }
 
@@ -98,9 +103,6 @@ nav {
 }
 
 #section-newsposts {
-
-    /*background-color: rgb(127, 0, 0);
-	background-color: rgba(255, 0, 0, .1);*/
     max-width: 450px;
     float:left;
 }
@@ -112,6 +114,12 @@ article > p {
 
 .btn-more{
 	margin: 0 15px 0 15px;
-	
-	width:95%
+	width:90%
+}
+
+@media screen and (min-width: 768px){
+	.btn-more{
+		margin: 0 15px 0 15px;
+		width:95%
+	}
 }
